# lowcost-star-tracker

./: .gitignore  README.md  compare_stabilization.py  compare_videos.py  convert_md_to_docx.py  convert_md_to_pdf.py  debug_stabilization.py  gyro_stabilizer.py  live_simple_star_solve.py  live_tetra3_solve.py  plot_gyro.py  pyproject.toml  stabilize_video.py  stellarium_config.py  stellarium_shake.py  stellarium_toggle_labels.py  synthetic_tetra3.py  test_witmotion_pywitmotion.py
calibration/: camera_calibration.py  capture_calibration_data.py  display_calibration.py  display_checkerboard.py  run_calibration.py
camera/: celestial_sphere_3d.py  celestial_sphere_viewer.py  integrated_stabilizer.py  usb_camera_viewer.py
celestial_overlay_system/: README.md  config.py
docs/: Development_Roadmap.md  LowCost_StarTracker_Paper.docx  LowCost_StarTracker_Project_Report.html  LowCost_StarTracker_README.html  LowCost_StarTracker_Technical_Paper.docx  LowCost_StarTracker_Technical_Paper.md  LowCost_StarTracker_Technical_Paper_with_images.docx  README.html  Technical_Paper_Evaluation.md  ~$wCost_StarTracker_Technical_Paper_with_images.docx
examples/: GL010912.LRV  GL010915.LRV  GL010925.LRV  GX010911.THM  GX010912.THM  GX010914.THM  GX010915.THM  GX010916.THM  GX010925.THM
experiments/: step1_opencv_stabilization.py  step1_opencv_stabilization_v2.py  step1_opencv_stabilization_v3.py  step2_compare_motion.py  step3_gyro_vs_opencv.py  step3_gyro_vs_opencv_v2.py  step3_gyro_vs_opencv_v3.py
imu/: __init__.py  find_witmotion_windows.py  pywitmotion_adapter.py  witmotion_reader.py
mavlink/: orange_cube_reader.py
motion_deblur/: README.md  __init__.py  demo.py  motion_deblur.py  psf_generator.py  synthetic_data.py
output/: GX010925_stacked.tiff  stacked_stars.tiff
photopills/: __init__.py  __main__.py  celestial.py  night_ar.py  photopills_ar.py
validation/: VALIDATION_REPORT.md  __init__.py  generate_validation_plots.py  validation_framework.py
wfb-stabilizer/: README.md  STABILIZATION_NOTES.md  ejo_wfb_stabilizer.py  run_camera1.py  (+9 more)
(+48 files in other folders)
