[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lowcost-star-tracker"
version = "0.1.0"
description = "Low-cost star tracker using gyroscope-based motion compensation and frame stacking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "astrophotography",
    "star-tracker",
    "gyroflow",
    "image-stacking",
    "gopro",
    "motion-compensation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "astropy>=5.3.0",
    "sep>=1.2.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
gpu = [
    "cupy>=12.0.0",
]

[project.scripts]
star-tracker = "star_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/lowcost-star-tracker"
Documentation = "https://github.com/yourusername/lowcost-star-tracker#readme"
Repository = "https://github.com/yourusername/lowcost-star-tracker"

[tool.hatch.build.targets.wheel]
packages = ["src/star_tracker"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=star_tracker"
